# poker_competition

./: .gitignore  README.md  agent_config.json  check_preflop_fallback.py  checkpoint_eval.py  elo_test.py  run_match_1000.py  submission  test_discard_vs_ev.py  test_preflop_cfr.py
agents/: fallback_only_agent.py
deep_cfr_training/: agent.py  benchmark.py  benchmark_traversal.py  deep_cfr.py  game_env.py  interfaces.py  networks.py  profile_pipeline.py  run.py  test_features.py  test_weights.npz  test_weights_full.pt  test_weights_strategy.pt  train.py  train.sh  trainer.py
deep_cfr_training/cfr/: __init__.py  runner.py  training.py  traversal.py
deep_cfr_training/cpp/: CMakeLists.txt  build.sh  constants.h  deep_cfr.cpp  discard.h  features.h  game_state.h  librangefinder.dylib  prob_agent.cpp  reservoir.h  traversal.cpp  traversal_engine.h
deep_cfr_training/cpp/cfr/: features.h  traversal_engine.h
deep_cfr_training/cpp/core/: constants.h  game_state.h  hand_eval.h
deep_cfr_training/cpp/heuristic/: discard.h  showdown.h
deep_cfr_training/cpp/range/: rangefinder.cpp
deep_cfr_training/discard_cfr/: __init__.py  buffer.py  cfr.py  (+5 more)
mccfr_training/: analyze_hits.py  compress_strategy.py  diagnose_cfr.py  eval_h2h.py
submission/: action.py  analyze_hits.py  cfr_trainer.py  compress_strategy.py  features.py  player.py  train_cfr.py  validate_match.py
submission_deep_cfr/: features.py  player.py  preflop.py  utils.py
submission_mccfr/: player.py
training/: cfr_trainer.py  deploy.sh  eval_h2h.py  train_and_validate.sh  train_cfr.py  validate_match.py
(+118 files in other folders)
